# ImmersiveAPI

./: .gitignore  Dockerfile  README.md  README.md.md  app.py  compose.yml  converter.py  default_config.toml  launch.sh  main.py  pyproject.toml  requirements.txt  utils.py
app/: config.py  configurator.py  main.py  patreon_utils.py  shared_models.py  utils.py  worker.py
app/llm/: glossary_manager.py  lru_in_memory_store.py  memory.py  ratelimit.py  types.py  vector_compressor.py
app/modules/badges/: badges.py
app/modules/converter/: converter.py  registry.py
app/modules/converter/converters/: abc2midi.py  imagemagick.py  pillow.py
app/modules/converter/templates/: index.html
app/modules/error/: error.py
app/modules/fusion_solar/: fusion_solar.py
app/modules/horde/: horde.py
app/modules/hugging/: coqui.py  hugging.py  piper_utils.py
app/modules/itch/: itch.py
app/modules/mc_version_stats/: data.py  database.py  mc_version_stats.py  mod.py  modrinth.py  utils.py
app/modules/mc_version_stats/templates/: dashboard.jinja
app/modules/mca/: chain.py  mca.py  multi_bucket_factory.py  openai_utils.py  premium.py
app/modules/mcr/: mcr.py
app/modules/patreons/: patreons.py
app/rag/: cached_request.py  document_manager.py  git_document_manager.py  html_processor.py  wiki_document_manager.py
common/: config.py  redirect_middleware.py  shared_models.py  utils.py  worker.py
common/langchain/: glossary_manager.py  information_extractor.py  memory.py  ratelimit.py  types.py  vector_compressor.py
common/langchain/tests/: test_hagrid.py  test_memory.py
common/rag/: document_manager.py  git_document_manager.py  html_processor.py  wiki_document_manager.py
converters/: abc2midi.py  ffmpeg.py  imagemagick.py  opencv.py  pillow.py
data/: default_config.toml  piper_gender.json
modules/badges/: badges.py
modules/converter/: converter.py  converterModule.py  registry.py
modules/converter/converters/: abc2midi.py  ffmpeg.py  imagemagick.py  opencv.py  pillow.py
modules/converter/templates/: index.html
modules/converter/test/: test.abc  tests.py
modules/error/: error.py
modules/ff_votes/: ff_votes.py
modules/fusion_solar/: fusion_solar.py
modules/hagrid/: hagrid.py
modules/horde/: horde.py
modules/hugging/: coqui.py  hugging.py  image.py  mistral.py  piper_utils.py  worker.py
modules/itch/: itch.py
modules/itchio/: itchioModule.py
modules/mc_version_stats/: categories.json  curseforge.py  dashboard.py  data.py  database.py  mc_version_stats.py  mod.py  modrinth.py  test.json  utils.py
modules/mc_version_stats/templates/: dashboard.jinja
modules/mca/: chain.py  groq_utils.py  mca.py  mistral_utils.py  multi_bucket_factory.py  openai_utils.py  patreon_utils.py  premium.py
modules/mcr/: mcr.py
modules/minecraft/: minecraft.py
modules/patreon/: patreonModule.py
modules/patreons/: patreons.py
modules/phrasey/: elvenlabs.py  llm.py  llm_helper.py  mystic.py  openai_helper.py  phrases.py  phrasey.py  playht.py  tts.py  utils.py
modules/phrasey/engines/: elvenlabs.py  mystic.py  playht.py  xtts.py
modules/phrasey/environments/: environment.py  minecraft.py
modules/phrasey/mystic_embeddings/: dragon.pth  hardtack.pth  keeper.pth  pirate.pth  riddle.pth
modules/phrasey/mystic_pipeline/: pipeline.py  pipeline.yaml  tts_pipeline.py
modules/video_highlights/: dashboard.py  labels.py  processor.py  test.py  video_highlights.py
modules/youare/: youare.py
scripts/: generate_voices.py  piper_gender_labeler.py  split.sh
templates/: index.html
test/: tests.py
tests/: fake_conversation.json  test_hagrid.py  test_memory.py
