[tool.poetry]
name = "immersive api"
version = "0.1.0"
description = "A collection of various endpoints"
authors = ["Luke100000 <jonas.peche@aon.at>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
poetry = "^1.8.2"
ruff = "^0.6.4"
pre-commit = "^3.8.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
python-dotenv = "^1.0.1"
fastapi = "^0.110.2"
numpy = "^1.24.3"
patreon = "^0.5.0"
cachetools = "^5.3.3"
databases = "^0.9.0"
requests = "^2.25.1"
openai = "^1.23.2"
torch = "^2.2.2"
dynaconf = "^3.2.5"
pygithub = "^2.3.0"
chromadb = "^0.4.24"
pandas = "^1.4"
litellm = "^1.35.17"
pydub = "^0.25.1"
prometheus-client = "^0.20.0"
prometheus-fastapi-instrumentator = "^7.0.0"
fusion-solar-py = "^0.0.21"
pillow = "^10.3.0"
pyrate-limiter = "^3.6.0"
aiofile = "^3.8.8"
aiohttp = "^3.9.5"
cutlet = "^0.4.0"
unidic-lite = "^1.0.8"
mecab-python3 = "^1.0.9"
tts = { git = "https://github.com/Luke100000/TTS.git", branch = "patch-1" }
itchio = "^1.1.3"
transformers = "^4.40.1"
python-multipart = "^0.0.9"
accelerate = "^0.29.3"
openai-whisper = "^20231117"
aiosqlite = "^0.20.0"
langchain = "^0.2.5"
langchain-groq = "^0.1.5"
langchain-community = "^0.2.5"
langchain-chroma = "^0.1.1"
langchain-huggingface = "^0.0.3"
langchain-mistralai = "^0.1.8"
langsmith = "^0.1.82"
dash = "^2.17.1"
a2wsgi = "^1.10.4"
dash-bootstrap-components = "^1.6.0"
dash-bootstrap-templates = "1.1.0"
ciso8601 = "^2.3.1"
langchain-openai = "^0.1.15"
markdownify = "^0.13.1"
diskcache = "^5.6.3"
faiss-cpu = "^1.8.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
